# api-micro-simple

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: main.rs
src/api/: auth_api.rs  department_api.rs  menu_api.rs  mod.rs  permission_api.rs  role_api.rs  user_api.rs
src/common/: access_token_request.rs  mod.rs  result.rs  security.rs  simple_cache.rs
src/entity/: department.rs  menu.rs  mod.rs  prelude.rs  role.rs  sys_role_perm.rs  sys_user_role.rs  user.rs
src/service/: auth.rs  department_service.rs  menu_service.rs  mod.rs  permission_service.rs  role_service.rs  user_service.rs
