[package]
name = "api-micro-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "^1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros","debug-print" ] }
dotenvy = "0.15.7"
log = "0.4"
env_logger = "0.11.6"
derive_more = { version = "1.0.0",features = ["full"] }
thiserror = "2.0.9"
argon2="0.5.3"
jsonwebtoken="9.3.0"
rand = "0.8"
actix-web-httpauth="0.8.2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20.2"